--- a/settings.json
+++ b/settings.json
@@ -145,10 +145,10 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
-                "value": 1516950794,
+                "lastUpdate": 1516959726,
+                "value": 1517037103,
                 "customProfile": "",
-                "lastChange": 1516888409,
+                "lastChange": 1516959726,
                 "type": 1
             }
         },
@@ -167,7 +167,7 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
+                "lastUpdate": 1516959726,
                 "value": 1516981591,
                 "customProfile": "",
                 "lastChange": 1516895081,
@@ -189,10 +189,10 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
-                "value": 1516948429,
+                "lastUpdate": 1516959726,
+                "value": 1517034748,
                 "customProfile": "",
-                "lastChange": 1516888409,
+                "lastChange": 1516959726,
                 "type": 1
             }
         },
@@ -211,7 +211,7 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
+                "lastUpdate": 1516959726,
                 "value": 1516983956,
                 "customProfile": "",
                 "lastChange": 1516897456,
@@ -233,10 +233,10 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
-                "value": 1516945837,
+                "lastUpdate": 1516959726,
+                "value": 1517032163,
                 "customProfile": "",
-                "lastChange": 1516888409,
+                "lastChange": 1516959726,
                 "type": 1
             }
         },
@@ -255,7 +255,7 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
+                "lastUpdate": 1516959726,
                 "value": 1516986548,
                 "customProfile": "",
                 "lastChange": 1516900055,
@@ -277,10 +277,10 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
-                "value": 1516943344,
+                "lastUpdate": 1516959726,
+                "value": 1517029674,
                 "customProfile": "",
-                "lastChange": 1516888409,
+                "lastChange": 1516959726,
                 "type": 1
             }
         },
@@ -299,7 +299,7 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "~UnixTimestamp",
-                "lastUpdate": 1516903632,
+                "lastUpdate": 1516959726,
                 "value": 1516989040,
                 "customProfile": "",
                 "lastChange": 1516903632,
@@ -321,10 +321,10 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "",
-                "lastUpdate": 1516903632,
-                "value": false,
+                "lastUpdate": 1516959726,
+                "value": true,
                 "customProfile": "",
-                "lastChange": 1516897456,
+                "lastChange": 1516959726,
                 "type": 0
             }
         },
@@ -362,7 +362,7 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "",
-                "lastUpdate": 1516890026,
+                "lastUpdate": 1516959726,
                 "value": false,
                 "customProfile": "",
                 "lastChange": 0,
@@ -384,7 +384,7 @@
                 "action": 0,
                 "customAction": 0,
                 "profile": "",
-                "lastUpdate": 1516890026,
+                "lastUpdate": 1516959726,
                 "value": false,
                 "customProfile": "",
                 "lastChange": 0,
@@ -464,7 +464,7 @@
                 "moduleName": "Archive Control",
                 "connectionID": 0,
                 "moduleID": "{43192F0B-135B-4CE7-A0A7-1475603F3060}",
-                "lastChange": 1516948983,
+                "lastChange": 1516960866,
                 "configuration": {
                     "Aggregation": "{\"ID49021\":{\"active\":true,\"visible\":true,\"type\":0},\"ID55787\":{\"active\":true,\"visible\":true,\"type\":0},\"ID38850\":{\"active\":true,\"visible\":true,\"type\":0},\"ID48733\":{\"active\":true,\"visible\":true,\"type\":0}}",
                     "Statistics": "{}"
@@ -583,7 +583,7 @@
             "parentID": 28334,
             "data": {
                 "isBroken": false,
-                "lastExecute": 1516948981,
+                "lastExecute": 1516960921,
                 "type": 0,
                 "file": "23819.ips.php"
             }
@@ -3257,7 +3257,7 @@
                 "limit": 0,
                 "script": "",
                 "conditions": [],
-                "lastRun": 1516948980,
+                "lastRun": 1516960920,
                 "cyclicDateType": 0,
                 "cyclicDateValue": 0,
                 "cyclicDateDay": 0,
